styles/globals.css
html,
body {
  height: 100%;
  width: 100%;
  /* background: lime; */
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

#__next {
  height: 100%;
  width: 100%;
  background: green;
}

